{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 256,
  "lineage": "586ba9ad-fb64-8e9d-6b21-8a98c4ecb200",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:944632824485:loadbalancer/app/xterraform-s1-alb/8aa31f5277f101ef",
            "arn_suffix": "app/xterraform-s1-alb/8aa31f5277f101ef",
            "dns_name": "xterraform-s1-alb-1384504932.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:944632824485:loadbalancer/app/xterraform-s1-alb/8aa31f5277f101ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "xterraform-s1-alb",
            "security_groups": [
              "sg-0b1fe6cd11f0357b9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07e8aec57069221cd"
              },
              {
                "subnet_id": "subnet-0face426a7465207e"
              }
            ],
            "subnets": [
              "subnet-07e8aec57069221cd",
              "subnet-0face426a7465207e"
            ],
            "tags": {
              "Name": "xterraform-s1-alb",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0120f348528bd0388",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:944632824485:listener/app/xterraform-s1-alb/8aa31f5277f101ef/3a0dfd980438c18b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:944632824485:targetgroup/xterraform-s1-tg/41f311026a08ece4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:944632824485:listener/app/xterraform-s1-alb/8aa31f5277f101ef/3a0dfd980438c18b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:944632824485:loadbalancer/app/xterraform-s1-alb/8aa31f5277f101ef",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:944632824485:targetgroup/xterraform-s1-tg/41f311026a08ece4",
            "arn_suffix": "targetgroup/xterraform-s1-tg/41f311026a08ece4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:944632824485:targetgroup/xterraform-s1-tg/41f311026a08ece4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "xterraform-s1-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "xterraform-s1-tg",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:security-group/sg-0b1fe6cd11f0357b9",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1fe6cd11f0357b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "52.64.201.74/32",
                  "124.157.86.242/32"
                ],
                "description": "Ingress Rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "52.64.201.74/32",
                  "124.157.86.242/32"
                ],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "xterraform-s1-alb-20210121200954866500000005",
            "name_prefix": "xterraform-s1-alb-",
            "owner_id": "944632824485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xterraform-s1-alb",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2904103553",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b1fe6cd11f0357b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "52.64.201.74/32",
              "124.157.86.242/32"
            ],
            "description": "Ingress Rule",
            "from_port": 443,
            "id": "sgrule-3682399423",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1fe6cd11f0357b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "52.64.201.74/32",
              "124.157.86.242/32"
            ],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-817789010",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1fe6cd11f0357b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:security-group/sg-06c75543b52e9d961",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c75543b52e9d961",
            "ingress": [
              {
                "cidr_blocks": [
                  "52.64.201.74/32",
                  "124.157.86.242/32"
                ],
                "description": "MySQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9ecfea141087d52"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "xterraform-s1-db-20210121200955044500000007",
            "name_prefix": "xterraform-s1-db-",
            "owner_id": "944632824485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xterraform-s1-db",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 3306,
            "id": "sgrule-3820858919",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06c75543b52e9d961",
            "self": false,
            "source_security_group_id": "sg-0b9ecfea141087d52",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg_db.aws_security_group.this",
            "module.sg_db.aws_security_group.this_name_prefix",
            "module.sg_ecs.aws_security_group.this",
            "module.sg_ecs.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3308686542",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06c75543b52e9d961",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.sg_db.aws_security_group.this",
            "module.sg_db.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "52.64.201.74/32",
              "124.157.86.242/32"
            ],
            "description": "MySQL/Aurora",
            "from_port": 3306,
            "id": "sgrule-1051827827",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06c75543b52e9d961",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg_db.aws_security_group.this",
            "module.sg_db.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:security-group/sg-0b9ecfea141087d52",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9ecfea141087d52",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b1fe6cd11f0357b9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "xterraform-s1-ecs-20210121200954288200000004",
            "name_prefix": "xterraform-s1-ecs-",
            "owner_id": "944632824485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xterraform-s1-ecs",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-4251057459",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b9ecfea141087d52",
            "self": false,
            "source_security_group_id": "sg-0b1fe6cd11f0357b9",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix",
            "module.sg_ecs.aws_security_group.this",
            "module.sg_ecs.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3042563706",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b9ecfea141087d52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.sg_ecs.aws_security_group.this",
            "module.sg_ecs.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:security-group/sg-023cdc96c98228ac3",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023cdc96c98228ac3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9ecfea141087d52"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "xterraform-s1-redis-20210121200955042600000006",
            "name_prefix": "xterraform-s1-redis-",
            "owner_id": "944632824485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xterraform-s1-redis",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_redis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 6379,
            "id": "sgrule-2071469002",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-023cdc96c98228ac3",
            "self": false,
            "source_security_group_id": "sg-0b9ecfea141087d52",
            "to_port": 6379,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg_ecs.aws_security_group.this",
            "module.sg_ecs.aws_security_group.this_name_prefix",
            "module.sg_redis.aws_security_group.this",
            "module.sg_redis.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_redis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2055735204",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-023cdc96c98228ac3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.sg_redis.aws_security_group.this",
            "module.sg_redis.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bd665617c58bcb57",
            "domain": "vpc",
            "id": "eipalloc-01a9b4c2c52fe0efa",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0c3ce85ba6f255c6e",
            "private_dns": "ip-10-0-2-64.ap-southeast-2.compute.internal",
            "private_ip": "10.0.2.64",
            "public_dns": "ec2-13-210-112-37.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.210.112.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "xterraform-s1-ap-southeast-2a",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-033323e0670ab47b7",
            "domain": "vpc",
            "id": "eipalloc-08021d68b32466d7b",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0d2f805aac17b6000",
            "private_dns": "ip-10-0-3-102.ap-southeast-2.compute.internal",
            "private_ip": "10.0.3.102",
            "public_dns": "ec2-3-104-234-85.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.234.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "xterraform-s1-ap-southeast-2b",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:internet-gateway/igw-0e8489dab331ac566",
            "id": "igw-0e8489dab331ac566",
            "owner_id": "944632824485",
            "tags": {
              "Name": "xterraform-s1",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a9b4c2c52fe0efa",
            "id": "nat-0b441170309b98990",
            "network_interface_id": "eni-0c3ce85ba6f255c6e",
            "private_ip": "10.0.2.64",
            "public_ip": "13.210.112.37",
            "subnet_id": "subnet-07e8aec57069221cd",
            "tags": {
              "Name": "xterraform-s1-ap-southeast-2a",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08021d68b32466d7b",
            "id": "nat-0de5589510f4d1455",
            "network_interface_id": "eni-0d2f805aac17b6000",
            "private_ip": "10.0.3.102",
            "public_ip": "3.104.234.85",
            "subnet_id": "subnet-0face426a7465207e",
            "tags": {
              "Name": "xterraform-s1-ap-southeast-2b",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03dc936ede94275bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b441170309b98990",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03dc936ede94275bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0047f23a17c8556701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0de5589510f4d1455",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0047f23a17c855670",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e8489dab331ac566",
            "id": "r-rtb-01548e8f9b17efb281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01548e8f9b17efb28",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03dc936ede94275bd",
            "owner_id": "944632824485",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b441170309b98990",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xterraform-s1-private-ap-southeast-2a",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0047f23a17c855670",
            "owner_id": "944632824485",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0de5589510f4d1455",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xterraform-s1-private-ap-southeast-2b",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01548e8f9b17efb28",
            "owner_id": "944632824485",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8489dab331ac566",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xterraform-s1-public",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f431fe24172475e",
            "route_table_id": "rtb-03dc936ede94275bd",
            "subnet_id": "subnet-035aaecdce3c7e6fa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c879ebfcee67e968",
            "route_table_id": "rtb-0047f23a17c855670",
            "subnet_id": "subnet-00e251382eb0a35d8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f93b418b4eab5743",
            "route_table_id": "rtb-01548e8f9b17efb28",
            "subnet_id": "subnet-07e8aec57069221cd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b80f2131858db7f",
            "route_table_id": "rtb-01548e8f9b17efb28",
            "subnet_id": "subnet-0face426a7465207e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:subnet/subnet-035aaecdce3c7e6fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-035aaecdce3c7e6fa",
            "map_public_ip_on_launch": false,
            "owner_id": "944632824485",
            "tags": {
              "Name": "xterraform-s1-private-ap-southeast-2a",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:subnet/subnet-00e251382eb0a35d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00e251382eb0a35d8",
            "map_public_ip_on_launch": false,
            "owner_id": "944632824485",
            "tags": {
              "Name": "xterraform-s1-private-ap-southeast-2b",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:subnet/subnet-07e8aec57069221cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07e8aec57069221cd",
            "map_public_ip_on_launch": true,
            "owner_id": "944632824485",
            "tags": {
              "Name": "xterraform-s1-public-ap-southeast-2a",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:subnet/subnet-0face426a7465207e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0face426a7465207e",
            "map_public_ip_on_launch": true,
            "owner_id": "944632824485",
            "tags": {
              "Name": "xterraform-s1-public-ap-southeast-2b",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            },
            "vpc_id": "vpc-0120f348528bd0388"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:944632824485:vpc/vpc-0120f348528bd0388",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f20e8687bbd9e75d",
            "default_route_table_id": "rtb-05be201412fcbe347",
            "default_security_group_id": "sg-05096bb9a7862fca9",
            "dhcp_options_id": "dopt-e6716684",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0120f348528bd0388",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05be201412fcbe347",
            "owner_id": "944632824485",
            "tags": {
              "Name": "xterraform-s1",
              "app": "xterraform",
              "deployer": "terraform",
              "env": "s1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}